fix(ui): align ocp nav icon style and transcript/schedule polish

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -276,27 +276,9 @@ a {
   stroke-width: 2px;
 }
 
-.nav-icon-image {
-  width: 100%;
-  height: 100%;
-  display: block;
-  background-color: currentColor;
-  -webkit-mask-repeat: no-repeat;
-  -webkit-mask-position: center;
-  -webkit-mask-size: contain;
-  mask-repeat: no-repeat;
-  mask-position: center;
-  mask-size: contain;
-}
-
-.nav-icon-image-seal {
-  -webkit-mask-image: url("/icons/seal.png");
-  mask-image: url("/icons/seal.png");
-}
-
 .nav-item-ocp .nav-icon {
-  width: 24px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
 }
 
 .app-shell.sidebar-collapsed .nav-item {
